; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/wcn36xx/extr_smd.c_wcn36xx_smd_update_scan_params_rsp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/wcn36xx/extr_smd.c_wcn36xx_smd_update_scan_params_rsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wcn36xx_hal_update_scan_params_resp = type { i32 }

@WCN36XX_FW_MSG_PNO_VERSION_MASK = common dso_local global i32 0, align 4
@WCN36XX_FW_MSG_RESULT_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"error response from update scan\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @wcn36xx_smd_update_scan_params_rsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wcn36xx_smd_update_scan_params_rsp(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.wcn36xx_hal_update_scan_params_resp*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.wcn36xx_hal_update_scan_params_resp*
  store %struct.wcn36xx_hal_update_scan_params_resp* %8, %struct.wcn36xx_hal_update_scan_params_resp** %6, align 8
  %9 = load i32, i32* @WCN36XX_FW_MSG_PNO_VERSION_MASK, align 4
  %10 = xor i32 %9, -1
  %11 = load %struct.wcn36xx_hal_update_scan_params_resp*, %struct.wcn36xx_hal_update_scan_params_resp** %6, align 8
  %12 = getelementptr inbounds %struct.wcn36xx_hal_update_scan_params_resp, %struct.wcn36xx_hal_update_scan_params_resp* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* @WCN36XX_FW_MSG_RESULT_SUCCESS, align 4
  %16 = load %struct.wcn36xx_hal_update_scan_params_resp*, %struct.wcn36xx_hal_update_scan_params_resp** %6, align 8
  %17 = getelementptr inbounds %struct.wcn36xx_hal_update_scan_params_resp, %struct.wcn36xx_hal_update_scan_params_resp* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %15, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = call i32 @wcn36xx_warn(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %22 = load %struct.wcn36xx_hal_update_scan_params_resp*, %struct.wcn36xx_hal_update_scan_params_resp** %6, align 8
  %23 = getelementptr inbounds %struct.wcn36xx_hal_update_scan_params_resp, %struct.wcn36xx_hal_update_scan_params_resp* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %3, align 4
  br label %26

25:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @wcn36xx_warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
